# gpt-subtrans

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  Makefile  bandit-report.json  cline_mcp_settings.json  instructions_fi.txt  pyproject.toml  pytest.ini  readme.md  requirements.txt  vscode-settings.json
.clinerules/: CLINE-OVERVIEW.md
.github/workflows/: ci.yml  pipx-validation.yml
PySubtitle/: Instructions.py  Options.py  Substitutions.py  SubtitleBatch.py  SubtitleBatcher.py  SubtitleFile.py  SubtitleLine.py  SubtitleProcessor.py  SubtitleProject.py  SubtitleScene.py  SubtitleSerialisation.py  SubtitleTranslator.py  SubtitleValidator.py  Translation.py  TranslationClient.py  TranslationEvents.py  TranslationParser.py  TranslationPrompt.py  VersionCheck.py  cli.py
PySubtitle/Helpers/: Parse.py  Resources.py  Subtitles.py  TestCases.py  Text.py  Time.py  __init__.py  cli_utils.py
PySubtitle/Providers/: Provider_Azure.py  Provider_Bedrock.py  Provider_Claude.py  Provider_Custom.py  Provider_DeepSeek.py  Provider_Gemini.py  Provider_Mistral.py  Provider_OpenAI.py
PySubtitle/Providers/Anthropic/: AnthropicClient.py
PySubtitle/Providers/Azure/: AzureOpenAIClient.py
PySubtitle/Providers/Bedrock/: BedrockClient.py
PySubtitle/Providers/Custom/: CustomClient.py
PySubtitle/Providers/Gemini/: GeminiClient.py
PySubtitle/Providers/Mistral/: MistralClient.py
PySubtitle/Providers/OpenAI/: ChatGPTClient.py  DeepSeekClient.py  InstructGPTClient.py  OpenAIClient.py  OpenAIReasoningClient.py
PySubtitleHooks/: hook-PySubtitle.py
docs/: CI_CD_SETUP.md  DEVELOPMENT.md
gpt_subtrans.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: azure-subtrans.py  batch_process.py  bedrock-subtrans.py  claude-subtrans.py  deepseek-subtrans.py  gemini-subtrans.py  gpt-subtrans.py  llm-subtrans.py  makedistro-mac.sh  makedistro.sh  mistral-subtrans.py  subtrans_common.py  test_pipx_installation.py
src/PySubtitle/: Instructions.py  Options.py  Substitutions.py  SubtitleBatch.py  SubtitleBatcher.py  SubtitleError.py  SubtitleFile.py  SubtitleLine.py  SubtitleProcessor.py  SubtitleProject.py  SubtitleScene.py  SubtitleSerialisation.py  SubtitleTranslator.py  SubtitleValidator.py  Translation.py  TranslationClient.py  TranslationEvents.py  TranslationParser.py  TranslationPrompt.py  TranslationProvider.py  VersionCheck.py
src/PySubtitle/Helpers/: Resources.py  Subtitles.py  TestCases.py  Tests.py  Text.py  Time.py  __init__.py
src/PySubtitle/Providers/: Provider_Azure.py  Provider_Bedrock.py  Provider_Claude.py  Provider_Custom.py  Provider_DeepSeek.py  Provider_Gemini.py  Provider_Mistral.py  Provider_OpenAI.py
src/PySubtitle/Providers/Anthropic/: AnthropicClient.py
src/PySubtitle/Providers/Azure/: AzureOpenAIClient.py
src/PySubtitle/Providers/Bedrock/: BedrockClient.py
src/PySubtitle/Providers/Custom/: CustomClient.py
src/PySubtitle/Providers/Gemini/: GeminiClient.py
src/PySubtitle/Providers/Mistral/: MistralClient.py
src/PySubtitle/Providers/OpenAI/: ChatGPTClient.py  DeepSeekClient.py  InstructGPTClient.py  OpenAIClient.py  OpenAIReasoningClient.py
src/PySubtitle/cli/: __init__.py  azure.py  bedrock.py  claude.py  common.py  deepseek.py  gemini.py  gpt.py  llm.py  mistral.py
src/PySubtitle/instructions/: instructions.txt
src/gpt_subtrans.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: __init__.py  test_ChineseDinner.py  test_Parse.py  test_Substitutions.py  test_Subtitles.py  test_Time.py  test_Translator.py  test_cli_interface.py  test_hf_router_connectivity.py  test_pipx_installation.py  test_text.py
tests/TestData/: chinese_dinner.py
