[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-subtrans"
version = "1.0.9"
authors = [
  { name="machinewrapped" }, # Email can be added if known
]
description = "GPT-Subtrans is an open source subtitle translator that uses LLMs as a translation service. It can translate subtitles between any language pairs supported by the language model."
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
]
dependencies = [
    "python-dotenv",
    "srt",
    "regex",
    "appdirs",
    "events",
    "requests",
    "setuptools",
    "httpx[socks]", # Includes base httpx and socks extra
    # Add provider SDKs for pipx installation convenience
    "openai",
    "google-genai",
    "google-api-core", # Required for google.api_core.exceptions in GeminiClient
    "anthropic",
    "boto3", # Bedrock SDK
    "mistralai", # Mistral SDK
]

[project.urls]
Homepage = "https://github.com/machinewrapped/gpt-subtrans"
Repository = "https://github.com/machinewrapped/gpt-subtrans"
"Bug Tracker" = "https://github.com/machinewrapped/gpt-subtrans/issues"

[project.scripts]
gpt-subtrans = "PySubtitle.cli:gpt_subtrans_main"
azure-subtrans = "PySubtitle.cli:azure_subtrans_main"
bedrock-subtrans = "PySubtitle.cli:bedrock_subtrans_main"
claude-subtrans = "PySubtitle.cli:claude_subtrans_main"
deepseek-subtrans = "PySubtitle.cli:deepseek_subtrans_main"
gemini-subtrans = "PySubtitle.cli:gemini_main"
llm-subtrans = "PySubtitle.cli:llm_subtrans_main"
mistral-subtrans = "PySubtitle.cli:mistral_subtrans_main"
batch-process = "PySubtitle.cli:batch_process_main"

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["PySubtitle*"]
exclude = ["tests*", "PySubtitleHooks*", "scripts*"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "T20", "SIM", "ARG"]
ignore = ["E501"]

[tool.pyright]
include = ["PySubtitle"]
exclude = ["**/__pycache__", "tests", "scripts"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.10"
pythonPlatform = "All"
