[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-subtrans"
version = "1.1.2"
authors = [
    { name = "MachineWrapped", email = "machinewrapped@gmail.com" },
]
description = "An open source subtitle translator that uses LLMs as a translation service."
readme = "readme.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "python-dotenv",
    "srt",
    "regex",
    "appdirs",
    "requests",
    "setuptools",
    "httpx[socks]",
]

[project.optional-dependencies]
openai = ["openai"]
gemini = ["google-genai", "google-api-core"]
claude = ["anthropic"]
mistral = ["mistralai"]
deepseek = ["openai"] # DeepSeek uses the OpenAI SDK
bedrock = ["boto3"]
all = [
    "openai",
    "google-genai",
    "google-api-core",
    "anthropic",
    "mistralai",
    "boto3",
]

[project.urls]
Homepage = "https://github.com/machinewrapped/gpt-subtrans"
Issues = "https://github.com/machinewrapped/gpt-subtrans/issues"

[project.scripts]
gpt-subtrans = "PySubtitle.cli:gpt_main"
claude-subtrans = "PySubtitle.cli:claude_main"
gemini-subtrans = "PySubtitle.cli:gemini_main"
deepseek-subtrans = "PySubtitle.cli:deepseek_main"
mistral-subtrans = "PySubtitle.cli:mistral_main"
bedrock-subtrans = "PySubtitle.cli:bedrock_main"
llm-subtrans = "PySubtitle.cli:llm_main"
azure-subtrans = "PySubtitle.cli:azure_main"

[tool.setuptools.package-data]
PySubtitle = ["py.typed", "instructions/*.txt"]
